--- a/bhoma/formentry/client/xform.html
+++ b/bhoma/formentry/client/xform.html
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <script language="javascript" type="text/javascript" src="lib/jquery.js"></script>   
+    <script language="javascript" type="text/javascript" src="jquery.js"></script>   
 
 <script language="javascript">
 
 XFORM_URL = "http://127.0.0.1:444/"
-FORM_ID = 1;
 
 gSessionID = -1;
 
