--- a/bhoma/formentry/client/layout.html
+++ b/bhoma/formentry/client/layout.html
@@ -28,6 +28,7 @@ function init () {
   questionCaption = new Indirect();
   questionEntry = new Indirect();
   progressBar = new Indirect();
+  answerBar = new Indirect();
   
   gSceneGraph = new Layout('main', 3, 1, '*', [HEADER_HEIGHT, '*', FOOTER_HEIGHT], SCREEN_BORDER, 0, MAIN_COLOR, BORDER_COLOR, null, [
     new Layout('header', 1, 1, '*', '*', [SCREEN_MARGIN, SCREEN_MARGIN, SCREEN_MARGIN, SECTION_MARGIN], 0, HEADER_COLOR, HEADER_COLOR, HEADER_COLOR, [
@@ -39,8 +40,8 @@ function init () {
     new Layout('entry', 1, 1, '*', '*', [SCREEN_MARGIN, SCREEN_MARGIN, 0, 0], 0, null, null, null, [questionEntry]),
     new Layout('footer', 1, 4, [FOOTER_BUTTON_WIDTH, FOOTER_BUTTON_WIDTH, '*', FOOTER_BUTTON_WIDTH], '*',
                [SCREEN_MARGIN, SCREEN_MARGIN, SECTION_MARGIN, SCREEN_MARGIN], FOOTER_BUTTON_SPACING, FOOTER_COLOR, FOOTER_COLOR, FOOTER_COLOR, [
-      new TextButton('back-button', '#6ad', BUTTON_TEXT_COLOR, null, null, 'BACK', 1., null),
-      new TextButton('quit-button', '#d23', BUTTON_TEXT_COLOR, null, null, 'MENU', 1., null),
+      new TextButton('back-button', '#6ad', BUTTON_TEXT_COLOR, null, null, 'BACK', .9, null),
+      new TextButton('quit-button', '#d23', BUTTON_TEXT_COLOR, null, null, 'MENU', .9, null),
       progressBar,
       new TextButton('next-button', '#1a3', BUTTON_TEXT_COLOR, null, null, 'NEXT', 1.2, null)
     ]),
@@ -48,10 +49,7 @@ function init () {
 
   freeEntryKeyboard = new Indirect();
   freeEntry = new Layout('free-entry', 2, 1, '*', [110, '*'], 0, 0, null, null, null, [
-    new Layout('answer-bar', 1, 2, ['7*', '*'], '*', [30, 30, 20, 20], 6, null, null, null, [
-      new Layout('textbox', 1, 1, '*', '*', 3, 0, '#fff', '#000', null, [null]),
-      new TextButton('clear-button', '#aaa', BUTTON_TEXT_COLOR, null, null, 'CLEAR', 0.8, null)
-    ]),
+    answerBar,
     new Layout('kbd', 1, 1, '*', '*', [10, 10, 0, 5], 0, null, null, null, [freeEntryKeyboard])
   ]);
   
@@ -61,42 +59,80 @@ function init () {
     return new TextButton('button-' + lab, col, BUTTON_TEXT_COLOR, null, null, lab, sz, null);
   }
   
-  function nkb (lab, col) {
-    return kb(lab, 2., col);
+  function kbs (infos, def_color, def_sz) {
+    stuff = new Array();
+    for (i = 0; i < infos.length; i++) {
+      info = infos[i];
+      if (info != null) {
+        if (info instanceof Array) {
+          lab = info[0];
+          col = info.length > 1 ? info[1] : def_color;
+          sz = info.length > 2 ? info[2] : def_sz;
+        } else {
+          lab = info;
+          col = def_color;
+          sz = def_sz;
+        }
+        st = kb(lab, sz, col);
+      } else {
+        st = null;
+      }
+      stuff.push(st);
+    }
+    return stuff;
   }
 
-  numPad = new Layout('numpad', 4, 3, 105, 105, '*', 15, null, null, null, [
-    nkb('1'), nkb('2'), nkb('3'), nkb('4'), nkb('5'), nkb('6'), nkb('7'), nkb('8'), nkb('9'), null, nkb('0'), nkb('\u21d0', '#aaa')
-  ]);
+  numPad = new Layout('numpad', 4, 3, 105, 105, '*', 15, null, null, null,
+            kbs(['1', '2', '3', '4', '5', '6', '7', '8', '9', null, '0', ['\u21d0', '#aaa']], null, 2.));
   
-  function tkb (lab, col) {
-    return kb(lab, 1.5, col);
-  }
+  kbd = new Layout('text-kbd', 4, 13, 68, 85, '*', 6, null, null, null, 
+            kbs([
+  'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', '7', '8', '9', ['\u21d0', '#aaa'],
+  'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', '4', '5', '6', '',
+  'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '0', '1', '2', '3', '.',
+  '\u2013', '+', '%', '&', '*', '/', ':', ';', '(', ')', '!', '?', ','     
+            ], null, 1.5));
   
-  kbd = new Layout('text-kbd', 4, 13, 68, 85, '*', 6, null, null, null, [
-    tkb('A'), tkb('B'), tkb('C'), tkb('D'), tkb('E'), tkb('F'), tkb('G'), tkb('H'), tkb('I'), tkb('7'),
-    tkb('8'), tkb('9'), tkb('\u21d0', '#aaa'), tkb('J'), tkb('K'), tkb('L'), tkb('M'), tkb('N'), tkb('O'), tkb('P'),
-    tkb('Q'), tkb('R'), tkb('4'), tkb('5'), tkb('6'), tkb(' '), tkb('S'), tkb('T'), tkb('U'), tkb('V'),
-    tkb('W'), tkb('X'), tkb('Y'), tkb('Z'), tkb('0'), tkb('1'), tkb('2'), tkb('3'), tkb('.'), tkb('\u2013'),
-    tkb('+'), tkb('%'), tkb('&'), tkb('*'), tkb('/'), tkb(':'), tkb(';'), tkb('('), tkb(')'), tkb('!'),
-    tkb('?'), tkb(',')
-  ]);
-  
-  function ckb (lab, col) {
-    return kb(lab, 1.8, col);
-  }
-  choice = new Layout('ch', 4, 2, 400, 100, [30, '*', '*', '*'], 20, null, null, null, [
-    ckb('Apple'), ckb('Orange'), ckb('Pear'), ckb('Guava'), ckb('Lychee'), null, ckb('Banana'), null
-  ]);
+  choice = new Layout('ch', 4, 2, 400, 100, [30, '*', '*', '*'], 20, null, null, null, 
+    kbs(['Apple', 'Orange', 'Pear', 'Guava', 'Lychee', null, 'Banana', null], null, 1.8));
   
   progressBar.content = new Layout('progress-bar', 1, 2, ['30%', '*'], '*', [10, 10, 15, 15], 0, null, null, null, [
     new Layout('pb0', 1, 1, '*', '*', 0, 0, '#4d6', null, null, [null]),   
     new Layout('pb0', 1, 1, '*', '*', 0, 0, HEADER_COLOR, null, null, [null])   
   ]);
   
+  freeTextAnswer = new Layout('answer-bar', 1, 2, ['7*', '*'], '*', [30, 30, 20, 20], 6, null, null, null, [
+    new Layout('textbox', 1, 1, '*', '*', 3, 0, '#fff', '#000', null, [null]),
+    new TextButton('clear-button', '#aaa', BUTTON_TEXT_COLOR, null, null, 'CLEAR', 0.8, null)
+  ]);
+  
+  dateAnswer = new Layout('date-bar', 1, 6, [90, 36, 130, 36, 160, 110], '*', ['*', '*', 20, 20], 6, null, null, null, [
+    new Layout('db', 1, 1, '*', '*', 3, 0, '#fff', '#000', null, [new TextCaption('d', TEXT_COLOR, '06', 1.7, 'center', 'middle')]),
+    new TextCaption('q-caption', TEXT_COLOR, '\u2013', 1.7, 'center', 'middle'),
+    new Layout('mb', 1, 1, '*', '*', 3, 0, '#ffa', '#000', null, [new TextCaption('m', TEXT_COLOR, 'Oct', 1.7, 'center', 'middle')]),
+    new TextCaption('q-caption', TEXT_COLOR, '\u2013', 1.7, 'center', 'middle'),
+    new Layout('yb', 1, 1, '*', '*', 3, 0, '#fff', '#000', null, [new TextCaption('y', TEXT_COLOR, '1983', 1.7, 'center', 'middle')]),
+    new TextButton('clear-button', '#aaa', BUTTON_TEXT_COLOR, null, null, 'CLEAR', 0.8, null)
+  ]);
+  
+  cdecade = new Layout('cm', 5, 2, 300, 70, '*', 20, null, null, null, 
+    kbs(['2000\u20142010', '1950\u20141959', '1990\u20141999', '1940\u20141949', '1980\u20141989',
+         '1930\u20141939', '1970\u20141979', '1920\u20141929', '1960\u20141969', '1910\u20141919'], null, 1.4));
+  cyear = new Layout('cm', 5, 2, 300, 70, '*', 20, null, null, null, 
+    kbs(['1990', '1995', '1991', '1996', '1992', '1997', '1993', '1998', '1994', '1999'], null, 1.4));
+  cmonth = new Layout('cm', 3, 4, 180, 120, '*', 30, null, null, null, 
+    kbs(['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'], null, 1.8));
+  cday = new Layout('cm', 5, 7, 85, 85, '*', 15, null, null, null, 
+    kbs(['1', '2', '3', '4', '5', '6', '7',
+         '8', '9', '10', '11', '12', '13', '14',
+         '15', '16', '17', '18', '19', '20', '21',
+         '22', '23', '24', '25', '26', '27', '28',
+         '29', '30', '31', null, null, null, null], null, 1.6));
+  
   questionCaption.content = new TextCaption('q-caption', TEXT_COLOR, 'What are your symptoms?', 1., 'left', 'top');
   questionEntry.content = freeEntry;
-  freeEntryKeyboard.content = kbd;
+  freeEntryKeyboard.content = cday;
+  answerBar.content = dateAnswer;
   
   redraw();
 }
