--- a/bhoma/formentry/client-experimental/layout.html
+++ b/bhoma/formentry/client-experimental/layout.html
@@ -71,9 +71,13 @@ function init () {
     new Layout('pb0', 1, 1, '*', '*', 0, 0, '#4d6', null, null, [null]),   
     new Layout('pb0', 1, 1, '*', '*', 0, 0, HEADER_COLOR, null, null, [null])   
   ]);
-  
+
   freeTextAnswer = new Layout('answer-bar', 1, 2, ['7*', '*'], '*', [30, 30, 20, 20], 6, null, null, null, [
-    new Layout('textbox', 1, 1, '*', '*', 3, 0, '#fff', '#000', null, [null]),
+    new Layout('textbox', 1, 1, '*', '*', 3, 0, '#fff', '#000', null, [
+      new Layout('textbox-inner', 1, 1, '*', '*', 5, 0, null, null, null, [
+        new TextInput('textinp', '#000', null, 'FREE-TEXT ENTRY!', 1.2, 'left', 2)
+      ])
+    ]),
     new TextButton('clear-button', '#aaa', BUTTON_TEXT_COLOR, null, null, 'CLEAR', 0.8, null)
   ]);
   
@@ -156,8 +160,7 @@ function redraw () {
     
   </head>
   <body id="body" onLoad="init();" style="cursor: crosshair; overflow: hidden; font-family: sans-serif; font-size: xx-large;" oncontextmenu="return false;">
-    <div id="viewport" style="position: absolute; left: 0px; top: 50px; width: 1024px; height: 768px; background-color: red; margin: 15px;"></div>
-
+    <div id="viewport" style="-moz-user-select: -moz-none; position: absolute; left: 0px; top: 50px; width: 1024px; height: 768px; background-color: red; margin: 15px;"></div>
    
     <button onClick="answerBar.content = freeTextAnswer; freeEntryKeyboard.content = numPad; redraw();">numeric entry</button>
     <button onClick="answerBar.content = freeTextAnswer; freeEntryKeyboard.content = kbd; redraw();">text entry</button>
