add version number to test form

--- a/bhoma/xforms/test.xhtml
+++ b/bhoma/xforms/test.xhtml
@@ -8,14 +8,14 @@
     <model>
 
 		<instance>
-			<test xmlns="http://openrosa.org/bhoma/test">
+			<test xmlns="http://openrosa.org/bhoma/test" version="1">
         <a />
         <b />
         <c />
         <d />
         <e />
         <f />
-			</test>
+        	</test>
 		</instance>
 		
 	<bind nodeset="b"  type="int"  required="true()" jr:preload="_property" jr:preloadParams="xx" />
