change the way preloaders work, to expect a dictionary of dictionaries so that you can preload different blocks with different tags/dictionaries

--- a/bhoma/xforms/test_preloaders.xhtml
+++ b/bhoma/xforms/test_preloaders.xhtml
@@ -17,8 +17,8 @@
 		</instance>
 	<bind nodeset="a" jr:preload="static" jr:preloadParams="a" />
 	<bind nodeset="b" jr:preload="static" jr:preloadParams="b" />
-    <bind nodeset="c" jr:preload="static" jr:preloadParams="c" />
-    <bind nodeset="d" jr:preload="static" jr:preloadParams="d" />
+    <bind nodeset="c" jr:preload="case" jr:preloadParams="c" />
+    <bind nodeset="d" jr:preload="case" jr:preloadParams="d" />
     </model>
 </h:head>			
 <h:body>
