--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -4,7 +4,7 @@
         xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:jr="http://openrosa.org/javarosa">
 <h:head>
-  <h:title>BHOMA General Visit</h:title>
+  <h:title>BHOMA Sick Pregnancy Visit</h:title>
   <model>
 		<instance>
 			<general xmlns="http://cidrz.org/bhoma/general">
