--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Sick Pregnancy Visit</h:title>
   <model>
 		<instance>
-			<general xmlns="http://cidrz.org/bhoma/general">
+			<sick_pregnancy xmlns="http://cidrz.org/bhoma/sick_pregnancy">
         <!-- insert meta block -->
         <!-- insert casexml block -->
         <!-- pre-loaded patient info from patient select module -->
@@ -79,7 +79,7 @@
         <followup_days />
         <outcome />
 
-			</general>
+			</sick_pregnancy>
 		</instance>
 		
     <bind nodeset="encounter_date" type="date" required="true()" jr:preload="date" jr:preloadParams="today" constraint=". &lt;= today() + 1 and . &gt;= today() - 30" jr:constraintMsg="Must be within recent past" />
