--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Under-Five Visit</h:title>
   <model>
 		<instance>
-			<general xmlns="http://cidrz.org/bhoma/general">
+			<underfive xmlns="http://cidrz.org/bhoma/underfive">
         <!-- insert meta block -->
         <!-- insert casexml block -->
         <!-- pre-loaded patient info from patient select module, including... -->
@@ -87,7 +87,7 @@
         <followup_days />
         <outcome />
 
-			</general>
+			</underfive>
 		</instance>
 		
     <bind nodeset="encounter_date" type="date" required="true()" jr:preload="date" jr:preloadParams="today" constraint=". &lt;= today() + 1 and . &gt;= today() - 30" jr:constraintMsg="Must be within recent past" />
